--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-uuid-generator": "^6.1.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.10",
     "react-native-webview": "11.23.0",
     "react-redux": "^8.0.2",
     "react-request": "^3.2.0",
+    "styled-components": "^5.3.6",
     "twrnc": "^3.4.0"
   },
   "devDependencies": {
