--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@homee/react-native-mapbox-navigation": "^1.1.0",
     "@react-native-community/geolocation": "^3.0.3",
     "@react-native-mapbox-gl/maps": "^8.6.0-beta.0",
-    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/stack": "^6.3.9",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "expo-blur": "^12.0.1",
+    "expo-linear-gradient": "^12.0.1",
     "react": "17.0.2",
     "react-dom": "18.0.0",
     "react-native": "0.66.4",
@@ -26,6 +29,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-formik": "^1.7.8",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-textfield": "^0.16.1",
     "react-native-paper": "^4.12.5",
