--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-textfield": "^0.16.1",
     "react-native-paper": "^4.12.5",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-status-bar-height": "^2.6.0",
