--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@homee/react-native-mapbox-navigation": "^1.1.0",
     "@react-native-community/geolocation": "^3.0.3",
     "@react-native-mapbox-gl/maps": "^8.6.0-beta.0",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.3.9",
